--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,21 @@
-html,
-body {
-  padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Montserrat:wght@600&family=Mulish:wght@600&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html{
+  font-size: 62.5%;
+}
+
+:root {
+  --ff-primary : "Montserrat";
+  --ff-secondary : "Roboto",sans-serif;
+  --ff-tertiary : "Inter" , sans-serif;
+  --ff-quaternery : "Poppins", sans-serif;
+  --ff-last : "Mulish", sans-serif;
 }
 
 a {
@@ -11,11 +23,8 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +32,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
