--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -1,3 +1,50 @@
-.main{
+/* .main{ */
     /* background-color: #f9f9f9; */
+/* } */
+
+.breadcrum_div{
+    max-width: 1450px;
+    margin: 0 auto;
+}
+
+.breadcrum{
+    display: flex;
+    gap: 20px;
+    width: 65%;
+    height: 35px;
+    margin-left: 4%;
+    /* border: 1px solid red; */
+    background: #D9D9D9;
+    border-radius: 5px;
+}
+
+.breadcrum:nth-child(0){
+    margin-left: 30px;
+}
+
+
+.dreadcrum_box{
+    width: max-content;
+    color: white;
+    background-color:  #544FA9;
+
+    font-size: 1.5rem;
+    font-family: var(--ff-last);
+    display: block;
+    /* padding-top: -px; */
+    /* margin-left: 20px; */
+    padding:6px 10px 10px 10px;
+    border-radius: 5px;
+    
+}
+
+.head{
+    max-width: 1450px;
+    margin: 0 auto;
+}
+.head h2{
+    font-size: 2rem;
+    font-family: var(--ff-last);
+    margin-left: 60px;
+    margin-top: 20px;
 }
